correct the spelling of Marek Lukaszuk
git-svn-id: https://svn.nmap.org/nmap@35473 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -807,7 +807,7 @@ o Significant code and documentation cleanup effort, fixing file encodings,
   cleanup of warnings from LLVM's AddressSanitizer.  [Daniel Miller]
 
 o [Ncat] Added support for socks5 and corresponding regression tests.
-  [Marek Lucaszuk, Petr Stodulka]
+  [Marek Lukaszuk, Petr Stodulka]
 
 o Added TCP support to dns.lua. [John Bond]
 
