Update script name in help of http-userdir-enum, update CHANGELOG to reflect last commit.
git-svn-id: https://svn.nmap.org/nmap@35517 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] [GH#242] Fix multiple false-positive sources in http-backup-agent. 
+  [Tom Sellers]
+
 Nmap 7.01 [2015-12-09]
 
 o Switch to using gtk-mac-bundler and jhbuild for building the OS X installer.
