New probe for GIOP service: http://seclists.org/nmap-dev/2015/q4/250
git-svn-id: https://svn.nmap.org/nmap@35534 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o New service probe for CORBA GIOP (General Inter-ORB Protocol) detection
+  should elicit a not-found exception from GIOP services that do not respond to
+  non-GIOP probes. [Quentin Hardy]
+
 o [NSE] Added ipv6-multicast-mld-list for discovering IPv6 multicast listeners
   with MLD probes. The discovery is the same as targets-ipv6-multicast-mld, but
   the subscribed addresses are decoded and listed.
