Extend libnetutil's isipprivate function to check for 169.254/16
git-svn-id: https://svn.nmap.org/nmap@35535 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Extend libnetutil's isipprivate function to check for 169.254/16 RFC3927
+  addresses. [Bill Parker]
+
 o New service probe for CORBA GIOP (General Inter-ORB Protocol) detection
   should elicit a not-found exception from GIOP services that do not respond to
   non-GIOP probes. [Quentin Hardy]
