Print service info for unlisted ports when service tunnel is detected
git-svn-id: https://svn.nmap.org/nmap@35536 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Print service info in grepable output for ports which are not listed in
+  nmap-services when a service tunnel (SSL) is detected. Previously, the
+  service info ("ssl|unknown") was not printed unless the service inside the
+  tunnel was positively identified. http://seclists.org/nmap-dev/2015/q4/260
+  [Daniel Miller]
+
 o Extend libnetutil's isipprivate function to check for 169.254/16 RFC3927
   addresses. [Bill Parker]
 
