New script: telnet-ntlm-info
git-svn-id: https://svn.nmap.org/nmap@35567 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added telnet-ntlm-info for extracting hostname and sometimes OS version
+  from NTLM-auth-enabled Telnet services. [Justin Cacak]
+
 o [NSE] Added smtp-ntlm-info for extracting hostname and sometimes OS version
   from NTLM-auth-enabled SMTP and submission services. [Justin Cacak]
 
