New script: ms-sql-ntlm-info
git-svn-id: https://svn.nmap.org/nmap@35570 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Added ms-sql-ntlm-info for extracting OS version and sometimes hostname
+  from MS SQL Server instances via the NTLM challenge message. [Justin Cacak]
+
 o [NSE] Added nntp-ntlm-info for extracting hostname and sometimes OS version
   from NTLM-auth-enabled NNTP services. [Justin Cacak]
 
