Replace time(2) calls in bounce scan with ScanProgressMeter. Related to #275
git-svn-id: https://svn.nmap.org/nmap@35573 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Use the same ScanProgressMeter for FTP bounce scan (-b) as for the other scan
+  types, allowing periodic status updates with --stats-every or keypress
+  events.  [Daniel Miller]
+
 o [GH#274] Use a shorter pcap_select timeout on OpenBSD, just as we do for OS
   X, old FreeBSD, and Solaris, which use BPF for packet capture and do not have
   properly select-able fds. Fix by OpenBSD port maintainer [David Carlier]
