Fix netmask handling on FreeBSD. Fixes #284
git-svn-id: https://svn.nmap.org/nmap@35597 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#284] Fix retrieval of route netmasks on FreeBSD. IPv6 routes were given
+  /32 netmasks regardless of actual netmask configured, resulting in failed
+  routing. Reported by Martin Gysi. [Daniel Miller]
+
 o Use the same ScanProgressMeter for FTP bounce scan (-b) as for the other scan
   types, allowing periodic status updates with --stats-every or keypress
   events.  [Daniel Miller]
