Improve handling of locally cached assignment data
so that whois-ip will not make HTTP requests to iana.org unless it is
permitted to write the remote resources to a local file and to
subsequently read from the local file.



git-svn-id: https://svn.nmap.org/nmap@35612 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] whois-ip: Don't request a remote IANA assignments data file when the
+  local filesystem will not permit the file to cached in a local file. [jah]
+
 o [NSE] Updated http-php-version hash database to cover all versions from PHP
   4.1.0 to PHP 5.4.45. Based on scans of a few thousand PHP web servers pulled
   from Shodan API (https://www.shodan.io/) [Daniel Miller]
