Remove 6/8, 7/8, and 55/8 from ip_is_reserved. http://seclists.org/nmap-dev/2016/q1/11
git-svn-id: https://svn.nmap.org/nmap@35618 e0a8ed71-7df4-0310-8962-fdc924857419

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o Removed 6/8, 7/8, and 55/8 networks from the list of "reserved" IP addresses
+  that Nmap uses to filter -iR randomly generated targets. These address ranges
+  belong to the U.S. Department of Defense, so users wanting to avoid those
+  ranges should use their own exclusion lists with --exclude or --exclude-file.
+  [Daniel Miller]
+
 o [NSE] whois-ip: Don't request a remote IANA assignments data file when the
   local filesystem will not permit the file to cached in a local file. [jah]
 
